micronfig_macros/tests/sources/wrong_unqualified_noimport.rs
micronfig::config! {
	GARASAUTO: String > PathBuf,
}

fn main() {
	println!("{:?}", GARASAUTO())
}
